--- a/Data analisis & visualization.ipynb
+++ b/Data analisis & visualization.ipynb
@@ -4,7 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Analisis & Visualization**"
+    ">## **Data Exploration Project 'ORDER PROCESS' OKE GARDEN**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DESKRIPSI FITUR:**  \n",
+    "Dalam analisis ini, kami menggabungkan dua tabel, yaitu tabel activity log dan tabel datetime.  \n",
+    "Berikut adalah deskripsi kolom-kolom yang dihasilkan dari penggabungan tersebut:  \n",
+    "\n",
+    "**Kolom dari Tabel Activity Log :**\n",
+    "- **id** = Identifikasi unik untuk setiap entri dalam activity log.\n",
+    "- **subject_type** = Jenis subjek yang terlibat dalam aktivitas, seperti pengguna atau sistem.\n",
+    "- **subject_id** = Identifikasi unik untuk subjek yang terlibat dalam aktivitas.\n",
+    "- **properties** = Informasi tambahan terkait aktivitas yang dicatat, disimpan dalam format JSON.\n",
+    "- **created_at** = Timestamp yang menunjukkan kapan aktivitas tersebut dibuat.\n",
+    "- **updated_at** = Timestamp yang menunjukkan kapan aktivitas tersebut terakhir diperbarui.\n",
+    "\n",
+    "**Kolom Hasil Ekstraksi dari JSON di Kolom Properties :**\n",
+    "- **old_status** = Status sebelumnya dari entri, diekstrak dari JSON di kolom properties.\n",
+    "- **old_created_at** = Timestamp yang menunjukkan kapan status lama tersebut dibuat, diekstrak dari JSON di kolom properties.\n",
+    "- **old_updated_at** = Timestamp yang menunjukkan kapan status lama terakhir diperbarui, diekstrak dari JSON di kolom properties.\n",
+    "- **attributes_status** = Status atribut yang terkait dengan aktivitas, diekstrak dari JSON di kolom properties.\n",
+    "- **attributes_created_at** = Timestamp yang menunjukkan kapan atribut tersebut dibuat, diekstrak dari JSON di kolom properties.\n",
+    "- **attributes_updated_at** = Timestamp yang menunjukkan kapan atribut terakhir diperbarui, diekstrak dari JSON di kolom properties.\n",
+    "\n",
+    "**Kolom dari Tabel Datetime :**\n",
+    "- **id_datetime** = Identifikasi unik untuk entri waktu yang terkait dengan aktivitas, diambil dari tabel datetime.\n",
+    "\n",
+    "**Perhitungan Matrix Waktu :**  \n",
+    "- Menghitung durasi waktu siklus (**order_cycle_time**) menggunakan TIMESTAMPDIFF pada atribut created_at dan updated_at.  \n",
+    "- Menghitung selang waktu status (**time_interval_status**) menggunakan TIMESTAMPDIFF pada old.updated_at dan waktu pembuatan log (created_at)  \n",
+    "\n",
+    "\n",
+    "\n",
+    "## **Problem Statements**\n",
+    "**- Order Cycle Time untuk tiap jenis order ?.**  \n",
+    "**- Order Cycle Time untuk Design+Build?.**  \n",
+    "**- Waktu yg dibutuhkan (interval waktu) untuk tiap proses berapa lama ?**  \n",
+    "**- Bottleneck process nya dimana ?**  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">## **Analisis & Visualization**"
    ]
   },
   {
@@ -120,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Query Data**\n",
+    ">## **Query Data**\n",
     "#### Data ini merupakan hasil dari proses assessment yang telah kami lakukan sebelumnya."
    ]
   },
@@ -775,7 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Data Transformation**\n",
+    ">## **Data Transformation**\n",
     "\n",
     "##### Pada tahap ini, kami melakukan serangkaian transformasi data yang bertujuan untuk mempersiapkan dataset agar lebih siap untuk analisis mendalam.  \n",
     "##### Transformasi ini mencakup dua aspek utama: pembuatan kolom baru dan pengubahan tipe data."
