--- a/Code Insight/1. Order Cycle Time Order.ipynb
+++ b/Code Insight/1. Order Cycle Time Order.ipynb
@@ -753,21 +753,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Mengonversi kolom 'old_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_cycletime['old_created_at'] = pd.to_datetime(order_cycletime['old_created_at'], errors='coerce')\n",
     "order_cycletime['old_created_at'] = pd.to_datetime(order_cycletime['old_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'old_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_cycletime['old_updated_at'] = pd.to_datetime(order_cycletime['old_updated_at'], errors='coerce')\n",
     "order_cycletime['old_updated_at'] = pd.to_datetime(order_cycletime['old_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
-    "order_cycletime['attributes_created_at'] = pd.to_datetime(order_cycletime['attributes_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
+    "order_cycletime['attributes_created_at'] = pd.to_datetime(order_cycletime['attributes_created_at'], errors='coerce')\n",
+    "proses_subject_type['attributes_created_at'] = pd.to_datetime(order_cycletime['attributes_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_cycletime['attributes_updated_at'] = pd.to_datetime(order_cycletime['attributes_updated_at'], errors='coerce')\n",
     "order_cycletime['attributes_updated_at'] = pd.to_datetime(order_cycletime['attributes_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)"
    ]
   },
