--- a/Code Insight/4. Bottleneck Process.ipynb
+++ b/Code Insight/4. Bottleneck Process.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fetch_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 137\u001b[0m\n\u001b[0;32m      1\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;124mWITH order_garden_data AS (\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    135\u001b[0m \n\u001b[0;32m    136\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m--> 137\u001b[0m order_process \u001b[38;5;241m=\u001b[39m \u001b[43mfetch_data\u001b[49m(host, port, user, passwd, databs, query)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fetch_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "query = \"\"\"\n",
     "\n",
@@ -817,20 +829,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mengonversi kolom 'old_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['old_created_at'] = pd.to_datetime(proses_subject_type['old_created_at'], errors='coerce')\n",
     "proses_subject_type['old_created_at'] = pd.to_datetime(proses_subject_type['old_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'old_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['old_updated_at'] = pd.to_datetime(proses_subject_type['old_updated_at'], errors='coerce')\n",
     "proses_subject_type['old_updated_at'] = pd.to_datetime(proses_subject_type['old_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['attributes_created_at'] = pd.to_datetime(proses_subject_type['attributes_created_at'], errors='coerce')\n",
     "proses_subject_type['attributes_created_at'] = pd.to_datetime(proses_subject_type['attributes_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['attributes_updated_at'] = pd.to_datetime(proses_subject_type['attributes_updated_at'], errors='coerce')\n",
     "proses_subject_type['attributes_updated_at'] = pd.to_datetime(proses_subject_type['attributes_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)"
    ]
   },
