--- a/Data analisis & visualization.ipynb
+++ b/Data analisis & visualization.ipynb
@@ -862,20 +862,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mengonversi kolom 'old_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['old_created_at'] = pd.to_datetime(proses_subject_type['old_created_at'], errors='coerce')\n",
     "proses_subject_type['old_created_at'] = pd.to_datetime(proses_subject_type['old_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'old_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['old_updated_at'] = pd.to_datetime(proses_subject_type['old_updated_at'], errors='coerce')\n",
     "proses_subject_type['old_updated_at'] = pd.to_datetime(proses_subject_type['old_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['attributes_created_at'] = pd.to_datetime(proses_subject_type['attributes_created_at'], errors='coerce')\n",
     "proses_subject_type['attributes_created_at'] = pd.to_datetime(proses_subject_type['attributes_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengonversi kolom 'attributes_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "proses_subject_type['attributes_updated_at'] = pd.to_datetime(proses_subject_type['attributes_updated_at'], errors='coerce')\n",
     "proses_subject_type['attributes_updated_at'] = pd.to_datetime(proses_subject_type['attributes_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)"
    ]
   },
