--- a/Data assessment.ipynb
+++ b/Data assessment.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,15 +1083,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "order_process['old_created_at'] = pd.to_datetime(order_process['old_created_at'], errors='coerce').dt.tz_localize(None)\n",
-    "order_process['old_updated_at'] = pd.to_datetime(order_process['old_updated_at'], errors='coerce').dt.tz_localize(None)\n",
-    "order_process['attributes_created_at'] = pd.to_datetime(order_process['attributes_created_at'], errors='coerce').dt.tz_localize(None)\n",
-    "order_process['attributes_updated_at'] = pd.to_datetime(order_process['attributes_updated_at'], errors='coerce').dt.tz_localize(None)\n",
+    "# Mengonversi kolom 'old_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_process['old_created_at'] = pd.to_datetime(order_process['old_created_at'], errors='coerce')\n",
+    "order_process['old_created_at'] = pd.to_datetime(order_process['old_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
+    "\n",
+    "# Mengonversi kolom 'old_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_process['old_updated_at'] = pd.to_datetime(order_process['old_updated_at'], errors='coerce')\n",
+    "order_process['old_updated_at'] = pd.to_datetime(order_process['old_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
+    "\n",
+    "# Mengonversi kolom 'attributes_created_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_process['attributes_created_at'] = pd.to_datetime(order_process['attributes_created_at'], errors='coerce')\n",
+    "order_process['attributes_created_at'] = pd.to_datetime(order_process['attributes_created_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
+    "\n",
+    "# Mengonversi kolom 'attributes_updated_at' menjadi tipe datetime dan menghapus informasi zona waktu\n",
+    "order_process['attributes_updated_at'] = pd.to_datetime(order_process['attributes_updated_at'], errors='coerce')\n",
+    "order_process['attributes_updated_at'] = pd.to_datetime(order_process['attributes_updated_at'], format='%Y-%m-%d %H:%M:%S', errors='coerce').dt.tz_localize(None)\n",
     "\n",
     "# Mengubah kolom 'id_datetime' menjadi integer\n",
     "order_process['id_datetime'] = order_process['id_datetime'].astype('Int64')"
